--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
 		<div class="business-card">
 			<div class="business-card__title-block">
 				<div class="business-card__title-section">
-					<div class="business-card__language-selector">
-						<button data-language="en" class="business-card__language-button business-card__language-button--active">EN</button>
-						<button data-language="ru" class="business-card__language-button">RU</button>
+					<div class="business-card__control-bar">
+						<div class="business-card__language-selector">
+							<button data-language="en" class="business-card__language-button business-card__language-button--active">EN</button>
+							<button data-language="ru" class="business-card__language-button">RU</button>
+						</div>
+						<a href="doc/cv.en.pdf" download="Anton Bogomazov - Java/Kotlin Developer.en.pdf" class="business-card__save-as-pdf">
+							Save as PDF
+						</a>
 					</div>
 					<h1 class="business-card__title business-card__content-section--ru">
 						Антон<br>Богомазов
