--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 <main>
 	<div class="page-wrapper">
 		<div class="business-card">
+			<div class="business-card__control-bar">
+				<div class="business-card__language-selector">
+					<button data-language="en" class="business-card__language-button business-card__language-button--active">EN</button>
+					<button data-language="ru" class="business-card__language-button">RU</button>
+				</div>
+				<a href="doc/cv.en.pdf" download="Anton Bogomazov - Java/Kotlin Developer.en.pdf" class="business-card__save-pdf-button">
+					<span class="business-card__content-section--en">Save as PDF</span>
+					<span class="business-card__content-section--ru">Сохранить PDF</span>
+				</a>
+			</div>
 			<div class="business-card__title-block">
 				<div class="business-card__title-section">
-					<div class="business-card__control-bar">
-						<div class="business-card__language-selector">
-							<button data-language="en" class="business-card__language-button business-card__language-button--active">EN</button>
-							<button data-language="ru" class="business-card__language-button">RU</button>
-						</div>
-						<a href="doc/cv.en.pdf" download="Anton Bogomazov - Java/Kotlin Developer.en.pdf" class="business-card__save-as-pdf">
-							Save as PDF
-						</a>
-					</div>
 					<h1 class="business-card__title business-card__content-section--ru">
 						Антон<br>Богомазов
 					</h1>
