--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 								<i>Домклик (Центр недвижимости от Сбербанка), Москва</i>
 							</p>
 							<p class="business-card__col-right">
-								Янв 2020 - Апр 2022
+								Дек 2020 - Апр 2022
 							</p>
 						</div>
 						<p class="business-card__paragraph">
@@ -399,7 +399,7 @@
 								<i>Domclick (Sberbank Real Estate Center), Moscow</i>
 							</p>
 							<p class="business-card__col-right">
-								Jan 2020 - Apr 2022
+								Dec 2020 - Apr 2022
 							</p>
 						</div>
 						<p class="business-card__paragraph">
