--- a/index.html
+++ b/index.html
@@ -425,6 +425,6 @@
         <span>2022</span>
     </footer>
 </div>
-<!--<script src="js/script.js"></script>-->
+<script src="js/script.js"></script>
 </body>
 </html>
