--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900|Oswald:300,400,500,600,700&display=swap"
           rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <link href="/img/favicon.svg" rel="icon" type="image/x-icon">
 </head>
 <body>
@@ -68,58 +68,59 @@
                 </h3>
                 <ul class="features__block-list">
                     <li>
-                        <span class="content-language--en">Core: OOP and Microservice patterns, DDD principles, Testing, CI/CD, Debugging, UNIX.</span>
-                        <span class="content-language--ru">Core: паттерны ООП и микросервисов, принципы DDD, принципы тестирования, CI/CD, Debugging, UNIX.</span>
+                        <span class="list-item-title">Core:</span>
+                        <span class="content-language--en">OOP and Microservice patterns, DDD principles, Testing, CI/CD, Debugging, UNIX.</span>
+                        <span class="content-language--ru">паттерны ООП и микросервисов, принципы DDD, тестирование, CI/CD, Debugging, UNIX.</span>
                     </li>
                     <li>
-                        <span class="content-language--en">PL: Java 17 (Core, Collections, Stream API), Kotlin (Collections, Coroutines).</span>
-                        <span class="content-language--ru">ЯП: Java 17 (Core, Collections, Stream API), Kotlin (Collections, Coroutines).</span>
+                        <span class="list-item-title">PL:</span>
+                        <span>Java 17, Kotlin</span>
                     </li>
                     <li>
-                        <span class="content-language--en">Web: Spring (Boot, MVC/WebFlux, Cloud, Data, Security).</span>
-                        <span class="content-language--ru">Web: Spring (Boot, MVC/WebFlux, Cloud, Data, Security).</span>
+                        <span class="list-item-title">Web:</span>
+                        <span>Spring (Boot, MVC/WebFlux, Cloud, Data, Security)</span>
                     </li>
                     <li>
-                        <span class="content-language--en">Testing: Junit, Mockito, WireMock, Testcontainers.</span>
-                        <span class="content-language--ru">Тестирование: Junit, Mockito, WireMock, Testcontainers.</span>
+                        <span class="list-item-title">Testing:</span>
+                        <span>Junit, Mockito, WireMock, Testcontainers</span>
                     </li>
                     <li>
-                        <span class="content-language--en">Build: Gradle, Jib, Docker.</span>
-                        <span class="content-language--ru">Сборка: Gradle, Jib, Docker.</span>
+                        <span class="list-item-title">Build:</span>
+                        <span class>Gradle, Maven, Jib</span>
                     </li>
                     <li>
-                        <span class="content-language--en">Message Brokers: RabbitMQ, Kafka.</span>
-                        <span class="content-language--ru">Брокеры сообщений: RabbitMQ, Kafka.</span>
+                        <span class="list-item-title">Message Brokers:</span>
+                        <span>RabbitMQ, Kafka</span>
                     </li>
                     <li>
-                        <span class="content-language--en">DB: PostgreSQL, Hibernate, Liquibase.</span>
-                        <span class="content-language--ru">БД: PostgreSQL, Hibernate, Liquibase.</span>
+                        <span class="list-item-title">DB:</span>
+                        <span>DB: PostgreSQL, Hibernate, Liquibase, MongoDB</span>
                     </li>
                     <li>
-                        <span class="content-language--en">DevOps: Kubernetes.</span>
-                        <span class="content-language--ru">DevOps: Kubernetes.</span>
+                        <span class="list-item-title">DevOps:</span>
+                        <span>Docker, Kubernetes</span>
                     </li>
                     <li>
-                        <span class="content-language--en">Monitoring: ELK, Grafana, Zabbix, Prometheus, APM.</span>
-                        <span class="content-language--ru">Мониторинг: ELK, Grafana, Zabbix, Prometheus, APM.</span>
+                        <span class="list-item-title">Monitoring:</span>
+                        <span>ELK, Grafana, Zabbix, Prometheus, APM</span>
                     </li>
                     <li>
-                        <span class="content-language--en">VC: Git, BitBucket.</span>
-                        <span class="content-language--ru">VC: Git, BitBucket.</span>
+                        <span class="list-item-title">VC:</span>
+                        <span>Git, BitBucket, Gitlab</span>
                     </li>
                     <li>
-                        <span class="content-language--en">Tools: Postman, Jira, IntelliJ IDEA.</span>
-                        <span class="content-language--ru">Инструменты: Postman, Jira, IntelliJ IDEA.</span>
+                        <span class="list-item-title">Tools:</span>
+                        <span>Postman, Jira, IntelliJ IDEA</span>
                     </li>
                     <li>
-                        <span class="content-language--en">Familiar with: MongoDB, Maven, Gitlab, HTML/CSS/JS (TS), Ktor, Exposed, Kotlin Serilization, Python + Jupiter.</span>
-                        <span class="content-language--ru">Знаком с: MongoDB, Maven, Gitlab, HTML/CSS/JS (TS), Ktor, Exposed, Kotlin Serilization, Python + Jupiter.</span>
+                        <span class="list-item-title">Familiar with:</span>
+                        <span>HTML/CSS/JS (TS), Ktor, Exposed, Kotlin Serialization, Python + Jupiter</span>
                     </li>
                 </ul>
             </div>
             <div class="features__block">
                 <h3 class="features__block-title">
-                    <span class="content-language--en">Skills</span>
+                    <span class="content-language--en">Courses and certificates</span>
                     <span class="content-language--ru">Курсы и сертификаты</span>
                 </h3>
                 <ul class="features__block-list">
@@ -421,10 +422,7 @@
             </div>
         </div>
     </main>
-    <footer>
-        <span>2022</span>
-    </footer>
 </div>
-<script src="js/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
