--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
                     <li>
                         <a href="https://www.coursera.org/account/accomplishments/verify/JTHCQBLC2AC7" target="_blank">Mathematics and Python for data analysis</a>
                     </li>
+                    <li>
+                        <a href="https://www.educative.io/verify-certificate/pg03nJFynApZ3WpYGuk6WKN6vggMu2" target="_blank">Frontend Developer Learning Path</a>
+                    </li>
                 </ul>
             </div>
             <div class="features__block">
@@ -157,7 +160,10 @@
                         <span class="content-language--en">English</span>
                         <span class="content-language--ru">Английский</span>
                     </p>
-                    <p class="pair-value">B2</p>
+                    <p class="pair-value">
+                        B2
+                        <a href="https://certs.duolingo.com/d36b414a622b50738864833fdeaf7381" target="_blank">Certificate</a>
+                    </p>
                 </div>
                 <div class="pair">
                     <p class="pair-key">
