--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </li>
                     <li>
                         <span class="list-item-title">DB:</span>
-                        <span>DB: PostgreSQL, Hibernate, Liquibase, MongoDB</span>
+                        <span>PostgreSQL, Hibernate, Liquibase, MongoDB</span>
                     </li>
                     <li>
                         <span class="list-item-title">DevOps:</span>
